fix #6: add scrollbarstyle

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -13,6 +13,27 @@
 	font-variant-ligatures: none !important;
 }
 
+/* Fallback of CodeMirror scroll style */
+*::-webkit-scrollbar {
+	background: rgba(0, 0, 0, 0);
+	max-width: 0.5rem;
+	max-height: 0.5rem;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: rgba(255, 255, 255, 0.25);
+	border-radius: 0.5rem;
+}
+
+*::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+}
+
+.CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
+	background: rgba(0, 0, 0, 0) !important;
+}
+/* --- */
+
 html, body {
 	height: 100%;
 	min-height: 100%;
